# oj

./: .gitignore  README.md  utf8.py
golang/: 001_twosum.go  002_addtwonumber.go  005_longest_palindromic_substr.go  007_reversenumber.go  102_m_binarytree_level_traversal.go  150_reverse_polish_notation.go  437_pathsum3.go  codech.go  oj_channel.go  oj_codech.go
js/leetcode/: 001_twosum.js  007_reverseinteger.js
lc_scala/: build.sbt
lc_scala/src/main/scala/: ListNode.scala  lc001_twosum.scala  lc007_reverse_number.scala  lc009_palidrome.scala  memo.txt
lc_scala/src/main/scala/codech/: BaseExtension.scala  ListNode.scala  MainScala.scala
lc_scala/src/main/scala/leetcode/: lc001_twosum.scala  lc002_addtwonum.scala  lc007_reverse_number.scala
lc_scala/src/main/scala/myakka/: PingPong.scala  SlowHttpServer.scala  future_taste.scala
lc_scala/src/main/scala/rz/codech/: MainScala.scala
lc_scala/src/main/scala/rz/leetcode/: lc001_twosum.scala  lc002_addtwonum.scala  lc007_reverse_number.scala
ojcpp/: CMakeLists.txt
ojcpp/codech/: algo_common.cpp  algo_common.h  codech_def.h  codech_main.cpp  codech_util.h
ojcpp/company/: amazon_gcd.cpp  amazon_memo.txt  autodesk.cpp  datarobot_countseq.cpp  fb_2019.cpp  memo.txt
ojcpp/cpp11/: 001_stringimpl.cpp  003_pointer_ptr.cpp  004_concurrency.cpp  125_forward_with_uniref.cpp  127_overload_universalreference.cpp  129_move_is_notcheap.cpp  130_perfectforward.cpp  142_emplace.cpp
ojcpp/hht/: 001_assignment.cpp  006_rebuildbintree.cpp  014_even_before_odd.cpp  016_reverse_list.cpp  022_stack_order.cpp  023_traversal_tree_layer.cpp  025_bstsum.cpp  028_permutation.cpp  029_morethanhalf.cpp  032_number_of_1.cpp  034_isugly.cpp  035_first_non_repeat.cpp  041_continuousseq.cpp  042_reverse_str.cpp  043_dice_probability.cpp
ojcpp/leetcode/: 001_twosum.cpp  002_addtwonumber.cpp  003_m_longestsubstrwithoutrepeat.cpp  004_h_medianofsortedarray.cpp  005_m_longestpalindromicsubstr.cpp  0077_m_combinatons.cpp  0078_m_subset.cpp  008_stringtointeger.cpp  011_containmostwater.cpp  011_m_containmostwater.cpp  015_m_3sum.cpp  016_m_3sumcloset.cpp  017_lettercombinationphonenumber.cpp  017_m_lettercombinationphonenumber.cpp  019_m_removenthnode.cpp  022_m_generateparenthese.cpp  023_mergeksortedlist.cpp  024_m_swapinpair.cpp  024_swapinpair.cpp  027_e_removeelement.cpp  028_e_strstr.cpp  029_m_dividetwointeger.cpp  030_h_substrconcatenationallwords.cpp  031_m_nextpermutation.cpp  033_m_searchinrotatedarray.cpp  035_e_searchinsertpos.cpp  039_m_combinationsum.cpp  040_m_combinationsum2.cpp  041_h_firstmissingpositive.cpp  042_h_traprainwater.cpp  044_h_wildcardmatching.cpp  046_m_permutation.cpp  047_m_permutation2.cpp  048_rotateimage.cpp  050_pow_xn.cpp  053_e_maximumsubarray.cpp  054_m_spiralmatrix.cpp  055_m_jumpgame.cpp  056 _m_mergeintervals.cpp  059_m_spiralmatrix2.cpp  (+119 more)
ojcpp/leetcode/000/: 003_m_longestsubstrwithoutrepeat.cpp  034_m_searchforarange.cpp  053_e_maximumsubarray.cpp  067_e_addbinary.cpp  095_m_uniquebst2.cpp
ojcpp/leetcode/0000/: 004_h_medianofsortedarray.cpp
ojcpp/leetcode/0100/: 113_m_pathsum2.cpp  121_e_besttimestock.cpp  131_m_palindromepartition.cpp  166_m_fractiontorecurringdecimal.cpp  179_m_largestnumber.cpp
ojcpp/leetcode/0900/: 901_m_stockspan.cpp
ojcpp/leetcode/100/: 137_m_single_number2.cpp  138_m_copylistwithrandompointer.cpp  199_m_tree_rightview.cpp
ojcpp/leetcode/1000/: 1071_e_greatecommondivisorstring.cpp
ojcpp/leetcode/200/: 200_m_numberofisland.cpp  211_m_addsearchword.cpp  236_lca.cpp  239_h_slidewindow_maximum.cpp
ojcpp/leetcode/300/: 322_coinchange.cpp  338_m_countingbits.cpp  399_m_evaluatedivision.cpp
ojcpp/leetcode/400/: 450_m_delnodeinbst.cpp  490_m_maze.cpp  494_m_targetsum.cpp
ojcpp/leetcode/800/: 801_m_minimumswapmakesequenceincrease.cpp  809_expressiveword.cpp  816_m_ambiguouscoordinates.cpp  831_m_maskingpersonalinformation.cpp  833_m_findandreplaceinstring.cpp
ojcpp/lintcode/: 1377_m_findsubstr.cpp  533_m_twosumclosest.cpp  597_e_subtreemaxavg.cpp
ojcpp/ytilidoc/: vf1_whole_square.cpp  vf3_arithmetic_seq.cpp  vf4_point_cartesian.cpp
ojpython/: codech_main.py  typeahead.py
ojpython/hackerrank/algorithm/: string_maximumpalindromes.py  string_reducedstring.py
ojpython/interview/: quantcast.py
ojpython/interview/virtu/: 182_maxapple.py  183_hex.cpp  183_hex.py  184_studentscore.py  185_substr.py  a.out  fib_1.py  other.py  vf1_wholesquare.py  vf2_similarinteger.py  vf3_pointcartesian.py  vf4_arithmetic.py
ojpython/leetcode/: 001_twosum.py  002_add_two_numbers.py  003_longest_substr.py  004_h_mediansortedarray.py  005_palindromic_substr.py  009_palindromic_number.py  015_3sum.py  021_merge2list.py  026_remove_duplicate.py  027_removeelement.py  035_searchinsertpos.py  039_combinationsum.py  043_multiplystring.py  046_permutation.py  049_group_anagrams.py  053_maxsubarr.py  066_plusone.py  067_addbin.py  078_subsets.py  088_mergesortedarray.py  100_sametree.py  141_linked_list_cycle.py  165_m_compareversion.py  413_arithmetic.py
ojpython/ytilidoc/: bugfixingleadersorted.py  count_mupltiplicate_pair.py  deeppits.py  memo.txt  smallest_positive_number.py
others/: utf8.py
scala/: build.sbt  memo.txt
scala/src/main/scala/: memo.txt
scala/src/main/scala/myakka/: AkkaActor.scala  Client.scala  Executor.scala  ManyActor.scala  SimpleClient.scala
scala/src/main/scala/rz/codech/: BaseExtension.scala  ListNode.scala  MainScala.scala
scala/src/main/scala/rz/leetcode/: lc002_addtwonum.scala  lc003_longest_non_repeat.scala
vc/: CMakeLists.txt
vc/cpp11/: 001_stringimpl.cpp  002_move.cpp  003_pointer_ptr.cpp  004_concurrency.cpp  005_smartptr.cpp  006_variadic_template.cpp  007_exception.cpp  008_operator_new.cpp  009_meta_programming.cpp  103_decltype.cpp  107_initializer_list.cpp  111_delete_function.cpp  112_override.cpp  117_generate_ctor.cpp  127_overload_universalreference.cpp  128_reference_collapsing.cpp  130_perfectforward.cpp
